# workflow-executor

./: .gitignore  README.md  main.py  pyproject.toml  run_trading_bot.py
.claude/: CLAUDE.md  CLAUDE_strict.md
.claude/agents/: architecture-guardian.md
.github/workflows/: ci.yml
examples/: README.md  __init__.py
examples/llm_deployment/: __init__.py  run_llm_deployment.py  workflows.py
examples/llm_deployment/tasks/: __init__.py  catalog.py  deployment.py  inference.py
examples/trading_bot/: __init__.py  run_trading_bot.py  workflows.py
examples/trading_bot/tasks/: __init__.py  llm.py  prediction.py  preprocessing.py  scraping.py
scripts/: attach_services.sh  detach_services.sh
src/workflow_executor/: __init__.py
src/workflow_executor/application/: __init__.py
src/workflow_executor/application/tasks/: __init__.py
src/workflow_executor/domain/interfaces/: __init__.py
tests/: conftest.py
tests/integration/: README.md  test_integration_dummy.py
tests/system/: README.md  test_dummy.py
tests/unit/: README.md  test_dummy.py
workflows/: __init__.py  trading_bot.py
workflows/tasks/: __init__.py  llm.py  prediction.py
